--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.7.0",
     "node": "^20.14.0",
     "nodemon": "^3.1.2"
