--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment-timezone": "^0.5.45",
     "mongodb": "^6.7.0",
     "node": "^20.14.0",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "stripe": "^15.12.0"
   }
 }
