--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -13,6 +14,7 @@
     "mongodb": "^6.7.0",
     "node": "^20.14.0",
     "nodemon": "^3.1.2",
+    "react-day-picker": "^8.10.1",
     "stripe": "^15.12.0"
   }
 }
